--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,11 @@
 .App {
+  height: 100vh;
+}
+/* .App {
   text-align: center;
 }
+
+
 
 .App-logo {
   height: 40vmin;
@@ -35,4 +40,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
